# G4OCCT

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md
.github/: lsan.supp
.github/workflows/: base-container.yml  ci.yml  container.yml  iwyu.yml  spdx.yml  version-check.yml
cmake/: G4OCCTConfig.cmake.in
docs/: _sidebar.md  example_dd4hep_simpledetector.md  solid_navigation.md
include/G4OCCT/: G4OCCTSolid.hh  TGeoOCCTSolid.hh
src/: G4OCCTSolid.cc  G4OCCTSolidKernel.cc  G4OCCTSolidKernel.hh  TGeoOCCTSolid.cc  TGeoOCCTSolidBridge.cc  TGeoOCCTSolidBridge.hh
src/dd4hep/: CMakeLists.txt
src/dd4hep/tests/: CMakeLists.txt  compact_step_assembly.xml.in  compact_step_solid.xml.in  test_dd4hep_plugins.cc
src/examples/: CMakeLists.txt
src/examples/DD4hepSimpleDetector/: CMakeLists.txt  exampleDD4hepSimpleDetector.cc
src/examples/DD4hepSimpleDetector/compact/: Simple_ILD_G4OCCT.xml.in
src/examples/DD4hepSimpleDetector/step/: generate_step_boxes.py  sensor_ladder.step  support_ladder.step
src/tests/: CMakeLists.txt  test_tgeo_dd4hep_eval.cc  test_tgeo_occt_solid.cc
